BEEBEEP (Secure Lan Messanger) - CHANGELOG - (c) Marco Mastroddi

BeeBEEP 4.2.0
- Desktop Sharing (beta)
- Send screenshot from chat
- Simplified GUI of "Configure network..." option
- Hive protocol can be used to contact user who remains offline
- Added delay on first connection option
- Option to send offline messages also in chat with all user
- ShareBox is improved with remote folder creation

BeeBEEP 4.0.0
- Changed all the main user interface
- All the main options are now grouped in the Settings menu
- Added status description option in user list
- Added status tooltip on the user's avatar/icon
- Added a check and an alert on same nickname/account of the connecting users
- Added "DisablePrivateChats" option on beebeep.rc file
- Added "DisableFileSharing" option on beebeep.rc file
- Chats are now always opened in separate window (single or multi)
- Fixed bug on leave a group chat
- Removed game plugin interface
- Added Workgroups interface in Settings/Users menu
- Users can be also recognized by their hash
- Change local user option added in Settings/OnConnection menu
- Message are now sent with UTC timestamp and converted to local time when received
- Fixed save of the dictionary selected
- Hunspell library updated to version 1.6.1
- Added option to select custom icons and emoticons
- Automatic disconnection on system in sleep mode and connection on system wake up (only for windows and macosx)

BeeBEEP 3.0.9
- The emoticon icon is now showed in detached chat (bug fixed)
- Added BUZZ for the private chats

BeeBEEP 3.0.8
- Chat messages are now saved on disconnection
- Fixed a bug in option "HideMainToolbar"
- Broadcast processes are now simplified and optimized (some options are now obsolete, see BEEHELP.txt)
- The file transferred via chat are now showed only in the right chat window
- Preserve last modification timestamp of the transferred files
- The message "User is writing" is now shown in the right chat window if it is visible