@@ -145,6 +145,7 @@ void Core::checkFileTransferMessage( VNumber peer_id, VNumber user_id, const Fil
     {
       if( fi.isDownload() )
         FileShare::instance().addDownloadedFile( fi );
+      QUrl file_url = QUrl::fromLocalFile( fi.path() );
       if( Bee::isFileTypeImage( fi.suffix() ) )
       {
         QImage img;
@@ -170,15 +171,14 @@ void Core::checkFileTransferMessage( VNumber peer_id, VNumber user_id, const Fil
             img_preview_height = img.height();
 
           // I have to add <br /> to center the image on the first display (maybe Qt bug)
-          sys_msg_img_preview = QString( "<br /><div align=center><img src=\"%1\" height=\"%2\" /></div>" )
-                  .arg( QUrl::fromLocalFile( img_preview_path ).toString() ).arg( img_preview_height );
+          sys_msg_img_preview = QString( "<br /><div align=center><a href=\"%1\"><img src=\"%2\" height=\"%3\" /></a></div>" )
+                  .arg( file_url.toString(), QUrl::fromLocalFile( img_preview_path ).toString() ).arg( img_preview_height );
         }
         else
           qWarning() << "Unable to show image preview of the file" << img_preview_path;
       }
 
       QString s_open = tr( "Open" );
-      QUrl file_url = QUrl::fromLocalFile( fi.path() );
       sys_msg_open_file = QString( "%1" ).arg( icon_html );
       sys_msg_open_file += QString( " %1 <a href=\"%2\">%3</a>." ).arg( s_open, file_url.toString(), fi.name() );
       file_url.setScheme( QLatin1String( "beeshowfileinfolder" ) );
